{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 197,
  "lineage": "9dd8cf7e-1f34-69f4-d387-563eb5674477",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static-prod-interne",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.70.71.12",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-10-07T17:33:35.336-07:00",
            "id": "projects/devoir-1-cr460-290803/regions/us-central1/addresses/ipv4-address",
            "name": "ipv4-address",
            "network_tier": "PREMIUM",
            "project": "devoir-1-cr460-290803",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/regions/us-central1/addresses/ipv4-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw1-canard",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "80",
                  "443",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-10-07T17:33:50.918-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/devoir-1-cr460-290803/global/firewalls/canard-fw-1",
            "name": "canard-fw-1",
            "network": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/global/networks/devoir1",
            "priority": 1000,
            "project": "devoir-1-cr460-290803",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/global/firewalls/canard-fw-1",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw1-mouton",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-10-07T17:33:50.918-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/devoir-1-cr460-290803/global/firewalls/mouton-fw-1",
            "name": "mouton-fw-1",
            "network": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/global/networks/devoir1",
            "priority": 1000,
            "project": "devoir-1-cr460-290803",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/global/firewalls/mouton-fw-1",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "public"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw2-mouton",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "2846",
                  "5462"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-10-07T17:33:58.339-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/devoir-1-cr460-290803/global/firewalls/mouton-fw-2",
            "name": "mouton-fw-2",
            "network": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/global/networks/devoir1",
            "priority": 1000,
            "project": "devoir-1-cr460-290803",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/global/firewalls/mouton-fw-2",
            "source_ranges": [
              "10.0.3.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "iana-access"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_firewall.fw1-mouton",
            "google_compute_network.devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "canard",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200910",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/zones/us-central1-a/disks/canard"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/devoir-1-cr460-290803/zones/us-central1-a/instances/canard",
            "instance_id": "618372982386188432",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "1MyS13DCFg8=",
            "metadata_startup_script": "sudo apt-get update -y \u0026\u0026 sudo apt-get upgrade -y \u0026\u0026 sudo apt-get install apache2 -y \u0026\u0026 sudo systemctl start apache2 \u0026\u0026 sudo systemctl enable apache2 \u0026\u0026 echo '\u003c!doctype html\u003e\u003chtml\u003e\u003cbody\u003e\u003ch1\u003eBienvenue dans TP CR460\u003c/h1\u003e\u003c/body\u003e\u003c/html\u003e' \u003e /var/html/www/index.html ",
            "name": "canard",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.202.13.4",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/global/networks/devoir1",
                "network_ip": "172.16.3.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/regions/us-central1/subnetworks/prod-dmz",
                "subnetwork_project": "devoir-1-cr460-290803"
              }
            ],
            "project": "devoir-1-cr460-290803",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/zones/us-central1-a/instances/canard",
            "tags": [
              "web"
            ],
            "tags_fingerprint": "3d9fNIIa_10=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.devoir1",
            "google_compute_subnetwork.prod-dmz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "cheval",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/fedora-coreos-cloud/global/images/fedora-coreos-32-20200923-3-0-gcp-x86-64",
                    "size": 8,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/zones/us-central1-a/disks/cheval"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/devoir-1-cr460-290803/zones/us-central1-a/instances/cheval",
            "instance_id": "1009889354842366096",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "jf_nKNHjhhA=",
            "metadata_startup_script": "sudo dnf -y update \u0026\u0026 sudo dnf -y upgrade \u0026\u0026 sudo dnf install -y openssh-server \u0026\u0026 sudo systemctl start sshd.service \u0026\u0026 sudo systemctl enable sshd.service",
            "name": "cheval",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.69.36.2",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/global/networks/devoir1",
                "network_ip": "10.0.2.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/regions/us-central1/subnetworks/prod-traitement",
                "subnetwork_project": "devoir-1-cr460-290803"
              }
            ],
            "project": "devoir-1-cr460-290803",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/zones/us-central1-a/instances/cheval",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "public"
            ],
            "tags_fingerprint": "ubqgePYPDQc=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.devoir1",
            "google_compute_subnetwork.prod-traitement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "fermier",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20200917",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/zones/us-central1-a/disks/fermier"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/devoir-1-cr460-290803/zones/us-central1-a/instances/fermier",
            "instance_id": "7571424529186283696",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "nuqK1eg18qM=",
            "name": "fermier",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.123.182.155",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/global/networks/default",
                "network_ip": "10.128.0.8",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/regions/us-central1/subnetworks/default",
                "subnetwork_project": "devoir-1-cr460-290803"
              }
            ],
            "project": "devoir-1-cr460-290803",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/zones/us-central1-a/instances/fermier",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mouton",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/fedora-coreos-cloud/global/images/fedora-coreos-32-20200923-3-0-gcp-x86-64",
                    "size": 8,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/zones/us-central1-a/disks/mouton"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/devoir-1-cr460-290803/zones/us-central1-a/instances/mouton",
            "instance_id": "2572215564534800528",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "jf_nKNHjhhA=",
            "metadata_startup_script": "sudo dnf -y update \u0026\u0026 sudo dnf -y upgrade \u0026\u0026 sudo dnf install -y openssh-server \u0026\u0026 sudo systemctl start sshd.service \u0026\u0026 sudo systemctl enable sshd.service",
            "name": "mouton",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.197.92.207",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/global/networks/devoir1",
                "network_ip": "10.0.3.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/regions/us-central1/subnetworks/prod-interne",
                "subnetwork_project": "devoir-1-cr460-290803"
              }
            ],
            "project": "devoir-1-cr460-290803",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/zones/us-central1-a/instances/mouton",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "public"
            ],
            "tags_fingerprint": "ubqgePYPDQc=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.devoir1",
            "google_compute_subnetwork.prod-interne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "devoir1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/devoir-1-cr460-290803/global/networks/devoir1",
            "name": "devoir1",
            "project": "devoir-1-cr460-290803",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/global/networks/devoir1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "prod-dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-10-07T17:33:50.931-07:00",
            "gateway_address": "172.16.3.1",
            "id": "projects/devoir-1-cr460-290803/regions/us-central1/subnetworks/prod-dmz",
            "ip_cidr_range": "172.16.3.0/24",
            "name": "prod-dmz",
            "network": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/global/networks/devoir1",
            "private_ip_google_access": false,
            "project": "devoir-1-cr460-290803",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/regions/us-central1/subnetworks/prod-dmz"
          },
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "prod-interne",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-10-07T17:33:51.054-07:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/devoir-1-cr460-290803/regions/us-central1/subnetworks/prod-interne",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "prod-interne",
            "network": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/global/networks/devoir1",
            "private_ip_google_access": false,
            "project": "devoir-1-cr460-290803",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/regions/us-central1/subnetworks/prod-interne"
          },
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "prod-traitement",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-10-07T17:33:51.016-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/devoir-1-cr460-290803/regions/us-central1/subnetworks/prod-traitement",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "prod-traitement",
            "network": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/global/networks/devoir1",
            "private_ip_google_access": false,
            "project": "devoir-1-cr460-290803",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devoir-1-cr460-290803/regions/us-central1/subnetworks/prod-traitement"
          },
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    }
  ]
}